<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.HomeActivity"
    android:background="@color/bgColor"
   >

    <TextView
            android:id="@+id/textView5"
            android:layout_width="231dp"
            android:layout_height="52dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_light"
            android:text="it's nice to have you back"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeUserNameTextView" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="106dp"
        android:layout_height="108dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/dyd_sponge24" />

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="250dp"
            android:gravity="center"
            app:cardBackgroundColor="@color/teal"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <!-- Card contents -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                android:padding="8dp">


                <TextView
                    android:id="@+id/planNameTextView"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text=".."
                    android:textColor="@color/fontColorDark" />

                <Button
                    android:id="@+id/goToPlanViewButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="65dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:onClick="openPlanActivity"
                    android:textSize="14sp"
                    app:icon="@drawable/baseline_arrow_right_alt_24"
                    app:iconSize="50dp" />

                <Button
                    android:id="@+id/deletePlanButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="110dp"
                    android:layout_marginTop="20dp"
                    android:onClick="deletePlan"
                    app:icon="@drawable/baseline_delete_forever_24"
                    app:iconSize="25dp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/welcomeUserNameTextView"
            android:layout_width="318dp"
            android:layout_height="48dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Welcome!"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginBottom="64dp"
        android:onClick="deleteUser"
        android:text="Delete your Account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/refreshDataHomeButton"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:onClick="refreshData"
        android:text="Refresh Data"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/deleteUserButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintVertical_bias="0.673" />
</androidx.constraintlayout.widget.ConstraintLayout>