...
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/planNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="create a plan!"
                android:textColor="@color/fontColorDark" />

            <Button
                android:id="@+id/createPlanButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
...
