...

    <string name="password">Password</string>
    <string name="registerPassword">Password | len > 4 </string>
    <string name="userName">userName</string>
    <string name="registerUserName">userName | len > 3</string>
    <string name="confirmPassword">confirm password</string>
    <string name="TOAST_STRING_NO_USERNAME_OR_PASSWORD_GIVEN">no username/password given</string>
    <string name="TOAST_STRING_WRONG_NAME_OR_PASSWORD_COMBO">wrong name/password combo</string>

    <string name="TasksTab">Tasks</string>
    <string name="UserTab">Users</string>
    <string name="ScoreTab">Score</string>
    <string name="large_text">
...
