<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".gui.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="4dp"
        android:hint="@string/confirmPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmRegisterPasswordEditText"
            android:inputType="textPassword"
            android:layout_width="240dp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_light"
        android:onClick="registerUserClick"
        android:text="Register"
        android:textColor="@color/fontColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/poppins"
        android:lineSpacingExtra="8sp"
        android:text="Give us a UserName and Password please!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/fontColorDark"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:hint="@string/registerUserName"
        app:layout_constraintBottom_toTopOf="@+id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUserNameTextField"
            android:layout_width="240dp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:hint="@string/registerPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/userNameLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextField"
            android:inputType="textPassword"
            android:layout_width="240dp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>